@@ -1,3 +1,5 @@
+- fix tests to use latest OpenGL::Modern (glGetUniformLocation_c removed _c)
+
 0.0402 2025-04-11
 - minimum Perl 5.10 for better Exporter
 - add constants up to GLFW 3.4
